--- a/25 lesson/style.css
+++ b/25 lesson/style.css
@@ -2,10 +2,8 @@
    width: 50px;
    height: 50px;
    background-color: blue;
-   transition: transform .5s ease, opacity 1s ease, background-color 0.4s;
+   transition: transform .5s ease, opacity 1s ease;
    position: absolute;
-   top: 24px;
-   left: 24px;
 }
 
 #coordinates {
